--- a/navigation.html
+++ b/navigation.html
@@ -6,13 +6,16 @@
     <title>A Propos</title>
 </head>
 <body>
-    <ul>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-    </ul>
+    <nav>
+        <picture><img src="" alt=""></picture>
+        <ul>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+        </ul>
+    </nav>
     
 </body>
 </html>
